--- a/FlowConnectMashup2.html
+++ b/FlowConnectMashup2.html
@@ -26,6 +26,7 @@
 </div>
 <div class="test">
 	<h1>DIT IS EEN TEST</h1>
+	<iframe src='https://sense.flowconnect.nl/single/?appid=e586bb89-cb1a-4d9e-a17f-c141b058e958&sheet=93f4a940-e682-4cb5-b689-1b5b3d406388&select=clearall' style='border:none;width:100%;height:100%;'></iframe>
 </div>
 
 <!--Error Popup-->
